Intermediate check in. too tired